--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
   build:
     docker:
       - image: python:3.7.3-stretch
+    working_directory: ~/repo
     steps:
       - checkout
       - restore_cache:
